--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^0.2.0",
     "@svgr/webpack": "^5.5.0",
     "autoprefixer": "^10.2.3",
     "next": "10.0.5",
