--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-pdf": "^5.1.0",
     "swr": "^0.4.0",
     "tailwindcss": "^2.0.2",
     "tailwindcss-debug-screens": "^2.0.0"
